--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netsparkerscanrunner",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Run a scan using the netsparker API.",
   "main": "runner.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "command-line-usage": "^5.0.5",
     "console.table": "^0.10.0",
     "lodash": "^4.17.15",
+    "minimist": ">=0.2.1",
     "junit-report-builder": "^1.3.2",
     "request": "^2.88.0"
   }
