--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "netsparkerscanrunner",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Run a scan using the netsparker API.",
   "main": "runner.js",
   "scripts": {
@@ -29,9 +29,9 @@
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "console.table": "^0.10.0",
+    "junit-report-builder": "^2.0.0",
     "lodash": "^4.17.15",
-    "minimist": ">=0.2.1",
-    "junit-report-builder": "^1.3.2",
+    "minimist": "^1.2.5",
     "request": "^2.88.0"
   }
 }
