--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "homepage": "https://github.com/nwestfall/netsparkerscanrunner#readme",
   "dependencies": {
+    "basic-auth-header": "^1.0.1",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
-    "console.table": "^0.10.0",
     "junit-report-builder": "^2.0.0",
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
-    "request": "^2.88.0"
+    "node-fetch": "^2.6.1",
+    "sleep-promise": "^9.0.0"
   }
 }
